# SCP_Spider

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  results_2025-07-08_18-05-53.json  results_2025-07-08_18-06-34.json  scp-wiki-cn_wikidot_com-offline.zim  scp-wiki-cn_wikidot_com-offline.zim_title.idx  scp_spider.py  scp_spider2.py  sw_template.js  url_interceptor.js
scp-wiki-cn_wikidot_com-offline.zim_title.idx.tmp/: docdata.glass  iamglass  position.glass  postlist.glass
