[project]
name = "scp-zip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "2to3>=1.0",
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "libzim>=3.7.0",
    "lxml>=6.0.0",
    "playwright>=1.54.0",
    "pyjsparser>=2.7.1",
]
